--- a/index.html
+++ b/index.html
@@ -19,27 +19,37 @@
 <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white px-4">
-        <a class="navbar-brand ms-2 nav-title" href="#">Ricomida</a>
+    <section id="Navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white pt-auto">
+        <a class="navbar-brand ms-4 nav-title" href="#">Ricomida</a>
         <button class="navbar-toggler boton" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item nav-link" href="#">Inicio</li>
-                <li class="nav-item nav-link" href="#">Recetas</li>
-                <li class="nav-item nav-link" href="#">Nosotros</li>
-                <li class="nav-item nav-link" href="#">Contacto</li>
+        <div class="navbar-collapse" id="navbarNavAltMarkup">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Navbar">Inicio</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Recetas">Recetas</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#Contacto">Contacto</a>
+                </li>
             </ul>
         </div>
     </nav>
-    <main>
+    </section>
 
         <!--Header-->
-        <header class="header_class my-3  pt-4 mx-4">
+        <main>
+        <header class="header_class my-3 mt-5 pt-5 mx-4">
             <div class="row">
-                <div class="col-sm-12  col-lg-6">
+                <div class="col-sm-12 col-lg-6">
                     <img src="assets/img/principal.jpg" alt="principal" class="img-fluid">
                 </div>
                 <div class="col-sm-12  col-lg-6 header_texto">
@@ -127,7 +137,7 @@
         <section class="receta">
             <div class="row mx-5">
                 <div class="col-12 col-lg-6">
-                    <h4 class="py-4 receta__title" id="ingredientes">INGREDIENTES</h4>
+                    <h4 class="py-4 receta__title text-decoration-underline" id="ingredientes">INGREDIENTES</h4>
                     <p class="py-4 receta__ingredientes">Masa</p>
                     <ul class="ps-0 receta__ingredientes--lista">
                         <li>20 gr de levadura seca instantánea</li>
@@ -156,7 +166,7 @@
                     </ul>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <h4 class="py-4" id="preparacion">PREPARACIÓN</h4>
+                    <h4 class="py-4 text-decoration-underline" id="preparacion">PREPARACIÓN</h4>
                     <p class="pt-2">1. Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande.
                         Dejar reposar 2 minutos. Agregar el aceite, la harina de maíz, sal y 400gr de harina. Mezclar
                         bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa blanda.
@@ -185,41 +195,43 @@
         </section>
 
         <!--Recetas Relacionadas-->
-        <section>
-            <div class="container-fluid mt-5"></div>
-            <h2 class="text-center border-top border-dark mt-5 pt-4">RECETAS RELACIONADAS</h2>            
-                <div class="row justify-content-around">
-                    <div class="card col-12 col-md-4">
-                        <img src="./assets/img/recipe-card-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h3 class="card-title">PANQUEQUES CON MANJAR Y CREMA</h3>
-                            <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est
-                                vulputate nostra, blandit erat luctus faucibus orci.</p>
-                        </div>
-                    </div>
-                    <div class="card col-12 col-md-4">
-                        <img src="./assets/img/recipe-card-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h3 class="card-title">TIRAMISÚ</h3>
-                            <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus
-                                lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
-                        </div>
-                    </div>
-                    <div class="card col-12 col-md-4">
-                        <img src="./assets/img/recipe-card-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h3 class="card-title">PLATEADA</h3>
-                            <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus
-                                lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
-                        </div>
+        <section id="Recetas">
+            <div class="container mt-5">
+            <h2 class="text-center border-top border-dark mt-5 pt-4">RECETAS RELACIONADAS</h2>
+            <div class="row justify-content-around">
+                <div class="card col-12 col-md-4">
+                    <img src="./assets/img/recipe-card-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="card-title">PANQUEQUES CON MANJAR Y CREMA</h3>
+                        <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est
+                            vulputate nostra, blandit erat luctus faucibus orci.</p>
                     </div>
                 </div>
+                <div class="card col-12 col-md-4">
+                    <img src="./assets/img/recipe-card-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="card-title">TIRAMISÚ</h3>
+                        <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus
+                            lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-4">
+                    <img src="./assets/img/recipe-card-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="card-title">PLATEADA</h3>
+                        <p class="card-text">Congue fermentum dignissim rhoncus elementum ac nisi, proin phasellus
+                            lacinia sed faucibus mauris, taciti scelerisque nulla ornare consequat.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
 
     <!--Footer-->
-    <footer class="">
+    <section id="Nosotros">
+    <footer>
         <article class="footer text-center mt-5 bg-danger text-white">
             <h2 class="pt-5">SUSCRÍBETE EN NUESTRO NEWSLETTER</h2>
             <P>y obtén las mejores recetas que tenemos en <span class="ricomida">Ricomida</span></P>
@@ -229,6 +241,7 @@
             <p class="text-white">Ricomida</p>
         </article>
     </footer>
+</section>
 
     <!--Librerías externas y propias-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
